[package]
name = "iron-ingot"
version = "0.3.0"
edition = "2021"
description = "A general-purpose library for rust that can help developers create various kinds of applications in a shorter amount of time."
repository = "https://github.com/ii887522/iron-ingot"
license = "MIT"
keywords = ["library", "lib", "iron", "general-purpose", "general"]
exclude = [
  ".github/*",
  ".vscode/*",
  "tests/*",
  ".editorconfig",
  ".gitignore",
  "CODE_OF_CONDUCT.md",
  "LICENSE",
  "README.md",
  "rustfmt.toml"
]

[dependencies]
rand = "0.8.5"
